<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http:// schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/name_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/password_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnregister"
        style="@style/Theme.Sudoku.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnregister_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/for_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="change_fragment_to_login"
        android:text="@string/for_login"
        android:textSize="14sp" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/cancel"
        android:textSize="14sp" />

</LinearLayout>